--- a/index.html
+++ b/index.html
@@ -12,10 +12,45 @@
 		CSS EXAMPLES
 	</div>
 
-		<dif class="row-1"></dif>
-		<dif class="row-1"></dif>
-		<dif class="row-1"></dif>
-		<dif class="row-1"></dif>
-		<dif class="row-1"></dif>
+		<div class="boxes description color">
+			
+			Hover to Change Color.
+
+		</div>
+		
+		<div class="boxes description color slower">
+			
+			Change Color Slowly
+
+		</div>
+
+		<div class="boxes description circle slower">
+			
+			Click & Hold
+
+		</div>
+
+		<div class="boxes description rectangle slower">
+			
+			Rectangle
+
+		</div>
+
+		<div class="boxes description slower triangle">
+			
+			Triangle
+
+		</div>
+		
+		<div class="boxes description border">
+			
+			Border
+
+		</div>
+		<div class="boxes description"></div>
+		<div class="boxes description"></div>
+		
+		
+
 </body>
 </html>
