--- a/index.html
+++ b/index.html
@@ -47,8 +47,24 @@
 			Border
 
 		</div>
-		<div class="boxes description"></div>
-		<div class="boxes description"></div>
+
+		<div class="boxes description inside-color">
+			
+			Inside Color
+
+		</div>
+		
+		<div class="tube description inside-white">
+			
+			Tube
+
+		</div>
+
+		<div class="click-circle slower inside-white">
+			
+
+
+		</div>
 		
 		
 
