Added rolling ball

--- a/index.html
+++ b/index.html
@@ -60,11 +60,24 @@
 
 		</div>
 
-		<div class="click-circle slower inside-white">
+		<div class="tube  slower inside-white description big-circle">
 			
-
+			Hover Here
 
 		</div>
+
+		<div class="tube description slower expand">
+			
+			Hover to Expand
+
+		</div>
+
+		<div class="ball-container">
+			<div class="ball"></div>
+		</div>
+		
+		<div class="slider"></div>
+
 		
 		
 
