--- a/index.html
+++ b/index.html
@@ -76,7 +76,31 @@
 			<div class="ball"></div>
 		</div>
 		
-		<div class="slider"></div>
+		<div class="rectangle-tilt description">
+			
+			Hold to Tilt
+
+		</div>
+
+		<div class="box-2 slower description">
+			
+			Hover Tilt
+
+		</div>
+
+		<div class="boxes description spin">
+			
+			Hover Spin
+
+		</div>
+
+		<!-- <div class="tube description large-description">
+			
+			Hover Enlarge			
+
+		</div> -->
+
+
 
 		
 		
