--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>css-homework</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -94,11 +95,62 @@
 
 		</div>
 
-		<!-- <div class="tube description large-description">
+		<div class="boxcircle-container">
 			
-			Hover Enlarge			
+			<div class="boxcircle"></div>	
 
-		</div> -->
+		</div>
+
+		<div class="nice-housing">
+		
+			<div class="button">
+			
+				Nice Button
+
+			</div>
+
+		</div>
+		
+		<div class="button-housing">
+
+			<div class="red-button">
+
+			</div>	
+		</div>
+
+		<div class="boxes description large-text">
+			
+			Hover Text
+
+		</div>
+
+		<div class="color-ball-container">
+
+			<div class="color-ball-1">
+				
+			</div>
+
+			<div class="color-ball-2">
+				
+			</div>
+			
+		</div>
+
+		<div class="boxes big-text blue-font">
+			
+			Font Color
+
+		</div>
+
+
+
+
+
+		
+
+
+
+		
 
 
 
